# CardioCheck.AI

./: .gitignore  .streamlit-rebuild  .streamlitignore  BUTTON_FIX_GUIDE.md  EMAIL_CONFIGURATION_GUIDE.md  EMAIL_SETUP_GUIDE.md  PowerPoint_Presentation_Guide.md  README.md  README_NEW.md  check_model_info.py  ci_check.py  constraints.txt  email_config.json  fix_models.py  fix_shap_and_predictions.py  pyproject.toml  requirements.txt  retrain_models.py  run_app.bat  run_app.ps1  streamlit_app.py  test_model_predictions.py  test_pdf.py  test_prediction.py  validate_deployment.py
.github/: copilot-instructions.md
.github/workflows/: streamlit-ci.yml
.streamlit/: config.toml  packages.txt
models/: heart_disease_prediction.py  heart_disease_prediction_optimized.py  model_evaluation.py  shap_analysis.py
notebooks/: exploration.ipynb
optimized_models/: adaboost_model.joblib  feature_selector.joblib  gradient_boosting_model.joblib  logistic_regression_model.joblib  neural_network_model.joblib  random_forest_model.joblib  scaler.joblib  selected_features.joblib  svm_model.joblib  xgboost_model.joblib
saved_models/: decision_tree_model.joblib  gradient_boosting_model.joblib  k-nearest_neighbors_model.joblib  logistic_regression_model.joblib  naive_bayes_model.joblib  neural_network_model.joblib  random_forest_model.joblib  scaler.joblib  svm_model.joblib  xgboost_model.joblib
scripts/: deploy_streamlit.ps1
